download videos from Yle servers
Copyright 2009-2017 Antti Ajanki
Distributed under the GPL v3

xx xxx 2017, Version 2.29

- New argument --resolution for selecting stream by vertical resolution
- Reduce repetition in output filenames
- Remove genre prefixes ("Elokuva:", "Kino:", etc.) from output filenames

19 Nov 2017, Version 2.28

- The wget downloader fails on some videos, use ffmpeg instead.
- Possibility to use libav instead of ffmpeg. See README.md.
- Fixed an issue with Unicode characters when a file has already been downloaded
- Avoid re-downloading on --resume when the file name contains a colon
- Show a warning if a download failure might be caused by a geo restriction

29 Oct 2017, Version 2.27

- --showmeta now prints the resolution for HDS streams
- Fixed --maxbitrate on HDS streams
- Don't redownload already downloaded files when using --resume (HDS streams).
  Requires ffmpeg and ffprobe.
- --duration now works on RTMP streams
- Warn if an output file extension is unsupported
- Fixed the timestamp of wget downloads

14 Oct 2017, Version 2.26

- Support wget older than 1.16
- Support older python-requests. Retry is disabled on old python-requests.
- Refuse to install on Python 3

9 Oct 2017, Version 2.25

- This version requires wget
- Retry failing downloads (HTML5 streams and stream metadata only)
- Support --resume on HTML5 streams
- Cancel stalled metadata downloads after a timeout
- Fallback to youtube-dl only when it is useful

23 Sep 2017, Version 2.24

- Option --showmetadata for printing stream metadata (available bitrates, etc.)
- Download only the main content in Elävä arkisto
- Fixed some Elävä arkisto audio streams and titles
- Resuming audio wasn't working when just a few bytes had been downloaded

20 Aug 2017, Version 2.23

- Use HTTPS on Areena

7 Aug 2017, Version 2.22

- Display a progress bar when downloading HTML5 videos
- Get all episodes on an Areena series page, not just dozen latest